--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Basic SEO Meta Tags -->
+    <title>Argha Biswas | Web Developer & Cybersecurity Enthusiast</title>
+    <meta
+      name="description"
+      content="Argha Biswas: A dedicated MERN stack developer and software engineering student with hands-on experience in web security, ethical hacking, and cybersecurity."
+    />
+    <meta
+      name="keywords"
+      content="Argha Biswas, Web Developer, Cybersecurity Enthusiast, MERN Stack, React, Node.js, Ethical Hacking, Pen Testing, Dhaka, Bangladesh, Kuala Lumpur, Malaysia, Software Engineering"
+    />
+    <meta name="author" content="Argha Biswas" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- This tells Google what your preferred URL is -->
+    <link rel="canonical" href="https://argha-dev.vercel.app/" />
+
+    <!-- "Beautiful" Social Media & Sharing Meta Tags (Open Graph & Twitter) -->
+    <meta
+      property="og:title"
+      content="Argha Biswas | Web Developer & Cybersecurity Enthusiast"
+    />
+    <meta
+      property="og:description"
+      content="A MERN stack developer specializing in the intersection of web development and cybersecurity."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://argha-dev.vercel.app/" />
+    <meta property="og:site_name" content="Argha Biswas Portfolio" />
+
+    <!-- 
+  ACTION: This is the MOST important tag for a "beautiful" share.
+  1. Take a screenshot of your finished Hero section.
+  2. Resize it to 1200x630 pixels.
+  3. Save it as "social-preview.png" in your /public folder.
+-->
+    <meta
+      property="og:image"
+      content="https://argha-dev.vercel.app/social-preview.png"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Argha Biswas | Web Developer & Cybersecurity Enthusiast"
+    />
+    <meta
+      name="twitter:description"
+      content="A MERN stack developer specializing in the intersection of web development and cybersecurity."
+    />
+    <meta
+      name="twitter:image"
+      content="https://argha-dev.vercel.app/social-preview.png"
+    />
+
+    <!-- 
+  *** NEW: STRUCTURED DATA FOR GOOGLE RANKING ***
+  This is the new code that helps you rank for your name.
+  It explicitly tells Google who you are and lists your social profiles.
+-->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Argha Biswas",
+        "url": "https://argha-dev.vercel.app/",
+        "jobTitle": "Web Developer and Cybersecurity Enthusiast",
+        "alumniOf": "Daffodil International University",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "HackerOne"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/in/argha-biswas/",
+          "https://www.facebook.com/Argha.OG",
+          "https://www.instagram.com/argha_0x/",
+          "https://medium.com/@argha-biswas",
+          "https://www.argha.online"
+        ]
+      }
+    </script>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend</title>
