--- a/frontend/index.html
+++ b/frontend/index.html
@@ -83,7 +83,7 @@
         ]
       }
     </script>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/argha-biswas.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend</title>
   </head>
